--- a/concourse/tasks/test_pxf.yml
+++ b/concourse/tasks/test_pxf.yml
@@ -7,6 +7,8 @@ inputs:
   - name: bin_gpdb
   - name: pxf_tarball
     optional: true
+  - name: ambari_env_files
+    optional: true
 params:
   ACCESS_KEY_ID:
   GROUP: smoke
