--- a/concourse/tasks/install_dataproc.yml
+++ b/concourse/tasks/install_dataproc.yml
@@ -6,6 +6,7 @@ inputs:
 outputs:
   - name: dataproc_env_files
 params:
+  CLUSTER_NAME:
   GOOGLE_CREDENTIALS:
   GOOGLE_PROJECT_ID:
   GOOGLE_ZONE:
