--- a/server/gradle.properties
+++ b/server/gradle.properties
@@ -27,4 +27,4 @@ pxfProtocolVersion=v15
 parquetVersion=1.9.0
 awsJavaSdk=1.11.490
 org.gradle.daemon=true
-org.gradle.parallel=true
+org.gradle.parallel=false
