CI: do not attempt more than once on dev pipelines [ci skip]

--- a/concourse/pipelines/templates/pxf-tpl.yml
+++ b/concourse/pipelines/templates/pxf-tpl.yml
@@ -1087,7 +1087,9 @@ jobs:
       <<: *dataproc_timed_destroy
     image: gpdb-pxf-dev-centos6-hdp2-server
     file: pxf_src/concourse/tasks/test_pxf_multinode.yml
+{% if deploy_env != 'dev' %}
     attempts: 2
+{% endif %}
     params:
       ACCESS_KEY_ID: {{tf-machine-access-key-id}}
       SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
@@ -1229,7 +1231,9 @@ jobs:
       <<: *dataproc_timed_destroy
     image: gpdb-pxf-dev-centos6-hdp2-server
     file: pxf_src/concourse/tasks/test_pxf_multinode.yml
+{% if deploy_env != 'dev' %}
     attempts: 2
+{% endif %}
     params:
       ACCESS_KEY_ID: {{tf-machine-access-key-id}}
       SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
@@ -1269,7 +1273,9 @@ jobs:
   - task: test_pxf
     file: pxf_src/concourse/tasks/test_pxf.yml
     image: gpdb-pxf-dev-centos6-cdh-server
+{% if deploy_env != 'dev' %}
     attempts: 2
+{% endif %}
     params:
       ACCESS_KEY_ID: {{tf-machine-access-key-id}}
       GROUP: gpdb,proxy,profile
