Update GCS connector jar in automation/prod
This updated version handles filenames with spaces inside correctly.
The error that the old connector gives looks like this:

java.net.URISyntaxException: Illegal character in path

Authored-by: Oliver Albertini <oalbertini@pivotal.io>

--- a/automation/pom.xml
+++ b/automation/pom.xml
@@ -254,7 +254,7 @@
         <dependency>
             <groupId>com.google.cloud.bigdataoss</groupId>
             <artifactId>gcs-connector</artifactId>
-            <version>1.9.2-hadoop2</version>
+            <version>hadoop2-1.9.17</version>
             <classifier>shaded</classifier>
             <!--The block below excludes all transitive dependencies for the gcs-connector jar-->
             <exclusions>
