--- a/server/build.gradle
+++ b/server/build.gradle
@@ -134,7 +134,7 @@ project('pxf') {
         bundleJars "org.apache.hadoop:hadoop-azure-datalake:${hadoopVersion}"
         bundleJars "com.microsoft.azure:azure-data-lake-store-sdk:2.2.3"
         // GCS jars and dependencies
-        bundleJars "com.google.cloud.bigdataoss:gcs-connector:1.9.2-hadoop2:shaded"
+        bundleJars "com.google.cloud.bigdataoss:gcs-connector:hadoop2-1.9.17:shaded"
     }
 }
 
