Update pg_regress pipeline
The pg_regress pipeline had become a bit stale and these changes help
bring it back up to speed.

Authored-by: Oliver Albertini <oalbertini@pivotal.io>

--- a/concourse/pipelines/pg_regress_pipeline.yml
+++ b/concourse/pipelines/pg_regress_pipeline.yml
@@ -41,30 +41,30 @@ resources:
 - name: libquicklz-centos7
   type: gcs
   source:
-    bucket: ((pivotal-gp-internal-artifacts-gcs-bucket))
-    json_key: ((gp-internal-artifacts-service-account-key))
-    regexp: centos7/libquicklz-(\d.*)\.el7\.x86_64\.rpm
+    bucket: ((gcs-bucket))
+    json_key: ((concourse-gcs-resources-service-account-key))
+    regexp: gp-internal-artifacts/centos7/libquicklz-(\d.*)\.el7\.x86_64\.rpm
 
 - name: python-centos7
   type: gcs
   source:
-    bucket: ((pivotal-gp-internal-artifacts-gcs-bucket))
-    json_key: ((gp-internal-artifacts-service-account-key))
-    versioned_file: centos7/python-2.7.12.tar.gz
+    bucket: ((gcs-bucket))
+    json_key: ((concourse-gcs-resources-service-account-key))
+    regexp: gp-internal-artifacts/centos7/python-2.7.12.build.(\d+).tar.gz
 
 - name: libquicklz-devel-centos7
   type: gcs
   source:
-    bucket: ((pivotal-gp-internal-artifacts-gcs-bucket))
-    json_key: ((gp-internal-artifacts-service-account-key))
-    regexp: centos7/libquicklz-devel-(\d.*)\.el7\.x86_64\.rpm
+    bucket: ((gcs-bucket))
+    json_key: ((concourse-gcs-resources-service-account-key))
+    regexp: gp-internal-artifacts/centos7/libquicklz-devel-(\d.*)\.el7\.x86_64\.rpm
 
 - name: libsigar-centos7
   type: gcs
   source:
-    bucket: ((pivotal-gp-internal-artifacts-gcs-bucket))
-    json_key: ((gp-internal-artifacts-service-account-key))
-    regexp: centos7/sigar-rhel7_x86_64-(.*)\.targz
+    bucket: ((gcs-bucket))
+    json_key: ((concourse-gcs-resources-service-account-key))
+    regexp: gp-internal-artifacts/centos7/sigar-rhel7_x86_64-(.*)\.targz
 
 - name: pxf_tarball
   type: s3
@@ -88,9 +88,9 @@ jobs:
 
 - name: compile_pxf
   plan:
-  - get: pxf_src
-    trigger: true
   - in_parallel:
+    - get: pxf_src
+      trigger: true
     - get: gpdb_src
       trigger: true
     - get: gpdb-pxf-dev-centos7
@@ -119,10 +119,10 @@ jobs:
     file: gpdb_src/concourse/tasks/compile_gpdb.yml
     image: gpdb6-centos7-build
     params:
+      BLD_TARGETS: "clients loaders"
       CONFIGURE_FLAGS: '--enable-cassert --enable-debug-extensions'
       TARGET_OS: centos
       TARGET_OS_VERSION: 7
-      BLD_TARGETS: "clients loaders"
     timeout: 30m
   - put: bin_gpdb
     params: { file: gpdb_artifacts/bin_gpdb.tar.gz }
@@ -158,12 +158,13 @@ jobs:
         - name: pxf_src
         - name: pxf_tarball
       params:
+        GROUP: fdw_smoke_schedule
+        HADOOP_CLIENT: HDP
         IMPERSONATION: true
+        PGPORT: {{pgport}}
+        PG_REGRESS: true
         TARGET_OS: centos
         TARGET_OS_VERSION: 7
-        HADOOP_CLIENT: HDP
-        GROUP: smoke_schedule,fdw_smoke_schedule
-        PG_REGRESS: true
       run:
         path: pxf_src/concourse/scripts/test_pxf.bash
 
@@ -199,15 +200,16 @@ jobs:
         - name: pxf_src
         - name: pxf_tarball
       params:
-        IMPERSONATION: true
-        TARGET_OS: centos
-        TARGET_OS_VERSION: 7
+        ACCESS_KEY_ID: {{tf-machine-access-key-id}}
+        GROUP: fdw_hcfs_schedule
         HADOOP_CLIENT: HDP
-        GROUP: hcfs_schedule,fdw_hcfs_schedule
+        IMPERSONATION: true
+        PGPORT: {{pgport}}
         PG_REGRESS: true
         PROTOCOL: s3
-        ACCESS_KEY_ID: {{tf-machine-access-key-id}}
         SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
+        TARGET_OS: centos
+        TARGET_OS_VERSION: 7
       run:
         path: pxf_src/concourse/scripts/test_pxf.bash
 
@@ -243,14 +245,16 @@ jobs:
         - name: pxf_src
         - name: pxf_tarball
       params:
-        IMPERSONATION: true
-        TARGET_OS: centos
-        TARGET_OS_VERSION: 7
+        ACCESS_KEY_ID: {{tf-machine-access-key-id}}
+        GOOGLE_CREDENTIALS: {{data-gpdb-ud-google-json-key}}
+        GROUP: fdw_hcfs_schedule
         HADOOP_CLIENT: HDP
-        GROUP: hcfs_schedule,fdw_hcfs_schedule
+        IMPERSONATION: true
+        PGPORT: {{pgport}}
         PG_REGRESS: true
         PROTOCOL: gs
-        GOOGLE_CREDENTIALS: {{data-gpdb-ud-google-json-key}}
+        TARGET_OS: centos
+        TARGET_OS_VERSION: 7
       run:
         path: pxf_src/concourse/scripts/test_pxf.bash
 
@@ -286,15 +290,17 @@ jobs:
         - name: pxf_src
         - name: pxf_tarball
       params:
-        IMPERSONATION: true
-        TARGET_OS: centos
-        TARGET_OS_VERSION: 7
+        ACCESS_KEY_ID: {{tf-machine-access-key-id}}
+        GROUP: fdw_hcfs_schedule
         HADOOP_CLIENT: HDP
-        GROUP: hcfs_schedule,fdw_hcfs_schedule
+        IMPERSONATION: true
+        PGPORT: {{pgport}}
         PG_REGRESS: true
         PROTOCOL: wasbs
-        WASBS_ACCOUNT_NAME: {{wasb-account-name}}
+        TARGET_OS: centos
+        TARGET_OS_VERSION: 7
         WASBS_ACCOUNT_KEY: {{wasb-account-key}}
+        WASBS_ACCOUNT_NAME: {{wasb-account-name}}
       run:
         path: pxf_src/concourse/scripts/test_pxf.bash
 
@@ -330,17 +336,18 @@ jobs:
         - name: pxf_src
         - name: pxf_tarball
       params:
-        IMPERSONATION: true
-        TARGET_OS: centos
-        TARGET_OS_VERSION: 7
-        HADOOP_CLIENT: HDP
-        GROUP: hcfs_schedule,fdw_hcfs_schedule
-        PG_REGRESS: true
-        PROTOCOL: adl
         ADL_ACCOUNT: {{adl-account}}
         ADL_OAUTH2_CLIENT_ID: {{adl-client-id}}
         ADL_OAUTH2_CREDENTIAL: {{adl-credential}}
         ADL_OAUTH2_REFRESH_URL: {{adl-refresh-url}}
+        GROUP: fdw_hcfs_schedule
+        HADOOP_CLIENT: HDP
+        IMPERSONATION: true
+        PGPORT: {{pgport}}
+        PG_REGRESS: true
+        PROTOCOL: adl
+        TARGET_OS: centos
+        TARGET_OS_VERSION: 7
       run:
         path: pxf_src/concourse/scripts/test_pxf.bash
 
@@ -369,9 +376,10 @@ jobs:
     file: pxf_src/concourse/tasks/test_pxf.yml
     image: gpdb-pxf-dev-centos7-hdp2-server
     params:
-      GROUP: hcfs_schedule,fdw_hcfs_schedule
-      PG_REGRESS: true
+      GROUP: fdw_hcfs_schedule
       IMPERSONATION: false
+      PGPORT: {{pgport}}
+      PG_REGRESS: true
       PROTOCOL: minio
       TARGET_OS: centos
       TARGET_OS_VERSION: 7
