--- a/concourse/settings/pxf-multinode-params.yml
+++ b/concourse/settings/pxf-multinode-params.yml
@@ -4,4 +4,4 @@ tf-bucket-path: clusters-google/
 no_of_files: 10000
 pxf-jvm-opts: "-Xmx512m -Xms512m"
 kerberos-enabled: true
-dataproc-image-version: "1.4.12-debian9"
+dataproc-image-version: "1.4"
