--- a/concourse/pipelines/templates/pxf-tpl.yml
+++ b/concourse/pipelines/templates/pxf-tpl.yml
@@ -1140,12 +1140,14 @@ jobs:
         GOOGLE_ZONE: {{google-zone}}
         IMAGE_VERSION: {{dataproc-image-version}}
         KERBEROS: {{kerberos-enabled}}
+        ccp_reap_minutes: 120
     - task: Generate Hadoop Cluster 2
       file: pxf_src/concourse/tasks/install_dataproc.yml
       image: ccp-7
       output_mapping:
         dataproc_env_files: dataproc_2_env_files
       params:
+        ccp_reap_minutes: 120
         GOOGLE_CREDENTIALS: ((data-gpdb-ud-kerberos-google-service-account-key))
         GOOGLE_PROJECT_ID: ((data-gpdb-ud-kerberos-google-project-id))
         GOOGLE_ZONE: ((data-gpdb-ud-kerberos-google-zone))
