docker-images: build when deps are updated
We are re-building docker images only when
`concourse/docker/pxf-dev-base/Dockerfile` is modified. This commit
expands that to also include Makefiles, important gradle, Maven, and
Gopkg files. This is in hopes of triggering image building whenever
there is a change in dependencies or build process.

Authored-by: Oliver Albertini <oalbertini@pivotal.io>

--- a/concourse/pipelines/docker-images.yml
+++ b/concourse/pipelines/docker-images.yml
@@ -256,7 +256,17 @@ resources:
     source:
       branch: {{pxf-git-branch}}
       uri: https://github.com/greenplum-db/pxf.git
-      paths: [concourse/docker/pxf-dev-base]
+      paths:
+        - Makefile
+        - automation/Makefile
+        - automation/pom.xml
+        - cli/go/src/pxf-cli/Gopkg.lock
+        - cli/go/src/pxf-cli/Gopkg.toml
+        - cli/go/src/pxf-cli/Makefile
+        - concourse/docker/pxf-dev-base
+        - server/Makefile
+        - server/build.gradle
+        - server/gradle.properties
 
   - name: gpdb-pxf-dev-centos6-image
     type: docker-image
