Hive: Add missing transitive dependency when reading parquet files
When reading Hive tables that are stored as parquet files, and the
tables have timestamp types (INT96 primitive type), then PXF is unable
to read the table because PXF is missing a transitive dependency
(org.jodd:jodd-core). This commit adds the missing transitive
dependency, and adds tests to make sure this issue is not encountered in
the future.

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -239,6 +239,7 @@ project('pxf-hive') {
         bundleJars "javax.jdo:jdo-api:3.0.1"
         bundleJars "org.codehaus.jackson:jackson-core-asl:1.9.13"
         bundleJars "org.codehaus.jackson:jackson-mapper-asl:1.9.13"
+        bundleJars "org.jodd:jodd-core:3.5.2"
         /*
          * Transitive dependencies for hive-exec-core until here
          * */
