--- a/cli/go/src/pxf-cli/Gopkg.toml
+++ b/cli/go/src/pxf-cli/Gopkg.toml
@@ -31,7 +31,7 @@
 
 [[constraint]]
   name = "github.com/greenplum-db/gp-common-go-libs"
-  revision = "1a4969cbabb6e2f16bb2db542deccbee9965d33c"
+  branch = "master"
 
 [prune]
   go-tests = true
