pgregress: fix external table tests
* our Ubuntu containers don't have the uuidgen command, so we should
  generate UUIDs in a portable way, using /dev/random
* make the WritableSmokeTest more robust by checking the entire output
  of the `hdfs -cat` command. Sorting uses dictionary sorting (-d) to
  avoid differences depending on interactive vs non-interactive shells.
* Cache dependencies for installing RPM/DEB pkgs. With these deps, we
  can install Greenplum from a DEB file, for example in CI:

	apt install /path/to/greenplum-db-X.X.X-ubuntu18.04-amd64.deb

  or an RPM file:

	rpm -ivh /path/to/greenplum-db-X.X.X-rhel6-x86_64.rpm

Authored-by: Oliver Albertini <oalbertini@vmware.com>

--- a/concourse/docker/pxf-dev-base/Dockerfile
+++ b/concourse/docker/pxf-dev-base/Dockerfile
@@ -42,11 +42,15 @@ RUN ["/bin/bash", "-c", "export BUILD_PARAMS=-Dorg.gradle.daemon=false && \
     chown -R gpadmin:gpadmin ~gpadmin && \
     rm -rf /tmp/pxf_src && \
     if grep 'CentOS release 6' /etc/centos-release; then \
-      yum install -y krb5-workstation python-paramiko && yum clean all; \
+      yum install -y krb5-workstation python-paramiko apr-util && yum clean all; \
     else \
       pip install psi paramiko --no-cache-dir; \
     fi && \
+    if grep 'CentOS Linux release 7' /etc/centos-release; then \
+      yum install -y apr-util bzip2 openssl zip && yum clean all; \
+    fi; \
     if grep 'VERSION=.*18.04.*LTS.*Bionic Beaver.*$' /etc/os-release; then \
+      apt-get update && apt-get install -y zip libaprutil1 && rm -rf /var/lib/apt/lists/* && \
       PERL_VERSION=perl-5.22.1 && \
       wget http://www.cpan.org/src/5.0/${PERL_VERSION}.tar.gz && \
       tar -xzf ${PERL_VERSION}.tar.gz && \
