Use Google Cloud Build to build docker images (#350)
- Add new Dockerfile under pxf-build-base to generate a tarball with
build dependencies (.m2 cache, .gradle cache, go cache, tomcat)
- Add cloudbuild.yml to build images
- Add cloudbuild pipeline to tag images as latest
- Add README.md with instructions on how to build images locally
- Add dep and ginko for the gpdb5 images
- Use java-1.8.0-openjdk-devel for gpdb5 images
- Remove gpdb6-centos6-* images
- provide a .pxfrc file
- source .bashrc in .bash_profile in ubuntu 18
- install psi paramiko as gpadmin and export LANG for ubuntu18
- Build a dev image, stop building flavor specific images
- Add GPHOME/bin to PATH
- Use registry-image instead of docker-image
- Add limits for gpadmin inside the container
- Use mvn dependency:go-offline to generate pom/jars deps in .m2
- Add readme to generate tarball with deps
- Use centos7 as default
- hardcode pxf_home

--- a/concourse/docker/pxf-dev-server/Dockerfile
+++ b/concourse/docker/pxf-dev-server/Dockerfile
@@ -1,19 +1,22 @@
-ARG BASE_IMAGE=gpdb-pxf-dev:centos6
+ARG BASE_IMAGE=pivotaldata/gpdb-pxf-dev:centos7
 
-FROM pivotaldata/${BASE_IMAGE} as scratch
+FROM ${BASE_IMAGE} as scratch
 
-ADD singlecluster/singlecluster-*.tar.gz /
+ADD singlecluster-*.tar.gz /
+
+ADD pxf-build-dependencies.tar.gz /tmp/build-dependencies
 
 RUN cd / && mv singlecluster-* singlecluster && chmod a+w singlecluster
 
-FROM pivotaldata/${BASE_IMAGE}
+FROM ${BASE_IMAGE}
 
 COPY --from=scratch /singlecluster /singlecluster
 
+COPY --from=scratch /tmp/build-dependencies/ /home/gpadmin/
+
 RUN mkdir -p /etc/hadoop/conf /etc/hive/conf /etc/hbase/conf && \
-    ln -s /singlecluster/hadoop/etc/hadoop/core-site.xml /etc/hadoop/conf && \
-    ln -s /singlecluster/hadoop/etc/hadoop/hdfs-site.xml /etc/hadoop/conf && \
-    ln -s /singlecluster/hadoop/etc/hadoop/mapred-site.xml /etc/hadoop/conf && \
-    ln -s /singlecluster/hadoop/etc/hadoop/yarn-site.xml /etc/hadoop/conf && \
+    ln -s /singlecluster/hadoop/etc/hadoop/*-site.xml /etc/hadoop/conf && \
     ln -s /singlecluster/hive/conf/hive-site.xml /etc/hive/conf && \
-    ln -s /singlecluster/hbase/conf/hbase-site.xml /etc/hbase/conf
+    ln -s /singlecluster/hbase/conf/hbase-site.xml /etc/hbase/conf && \
+    ln -s ~gpadmin/.{tomcat,go-dep-cached-sources,m2,gradle} ~root && \
+    chown -R gpadmin:gpadmin ~gpadmin/.{tomcat,go-dep-cached-sources,m2,gradle}
