Split dependencies tarball into 2 tarballs (#355)
* Split dependencies tarball into 2 tarballs

- 1 tarball for .gradle, .tomcat, .go
- 1 tarball for .m2 (includes all dependencies / allows for offline mode) 

These tarballs will be used in different jobs in different parts of the
pipeline

--- a/concourse/docker/pxf-build-base/Dockerfile
+++ b/concourse/docker/pxf-build-base/Dockerfile
@@ -27,11 +27,16 @@ RUN export BUILD_PARAMS=-Dorg.gradle.daemon=false && \
     for X in /tmp/pxf_src/server/build/stage/lib/pxf-*-[0-9]*.jar; do \
       ln -sf $X /root/automation_tmp_lib/`echo \`basename $X\` | sed -e 's/-[a-zA-Z0-9.]*.jar/.jar/'`; \
     done && touch /root/automation_tmp_lib/pxf-extras.jar && \
-    cd /tmp/pxf_src/automation && mvn dependency:go-offline -DexcludeGroupIds=org.greenplum && \
-    cd - && mkdir -p /tmp/output/.tomcat && \
+    make -C /tmp/pxf_src/automation dev && \
+    mkdir -p /root/pxf/servers/database/ && cp /tmp/pxf_src/server/pxf-service/src/templates/user/templates/jdbc-site.xml /root/pxf/servers/database/ && \
+    mkdir -p /root/pxf/servers/db-session-params/ && cp /tmp/pxf_src/server/pxf-service/src/templates/user/templates/jdbc-site.xml /root/pxf/servers/db-session-params/ && \
+    mkdir -p /root/pxf/servers/db-hive/ && cp /tmp/pxf_src/server/pxf-service/src/templates/user/templates/jdbc-site.xml /root/pxf/servers/db-hive/ && \
+    make -C /tmp/pxf_src/automation TEST=HdfsSmokeTest || true && \
+    mkdir -p /tmp/output/.tomcat && mkdir -p /tmp/automation && \
     mv /tmp/pxf_src/pxf_commit_sha /tmp/output/pxf_commit_sha && \
     mv /tmp/pxf_src/server/tomcat/build/apache-tomcat-*.tar.gz /tmp/output/.tomcat/ && \
     mv /tmp/pxf_src/cli/go/pkg/dep/sources /tmp/output/.go-dep-cached-sources && \
-    mv /root/.gradle /tmp/output && mv /root/.m2 /tmp/output && \
+    mv /root/.gradle /tmp/output && mv /root/.m2 /tmp/automation && \
     cd /tmp/output/ && tar -czf /tmp/pxf-build-dependencies.tar.gz . && \
-    rm -rf /tmp/output /tmp/pxf_src /root/.gradle /root/.m2
+    cd /tmp/automation && tar -czf /tmp/pxf-automation-dependencies.tar.gz . && \
+    rm -rf /tmp/output /tmp/pxf_src /root/.gradle /root/.m2 /tmp/automation /root/pxf
