--- a/concourse/docker/pxf-build-base/cloudbuild.yaml
+++ b/concourse/docker/pxf-build-base/cloudbuild.yaml
@@ -31,9 +31,14 @@ steps:
   - '-c'
   - |
     mkdir /workspace/build
-    docker run --rm -v /workspace/build:/tmp/build/ pxf-build-dev /bin/bash -c "cp /tmp/pxf-build-dependencies.tar.gz /tmp/build/"
+    docker run --rm -v /workspace/build:/tmp/build/ pxf-build-dev /bin/bash -c "cp /tmp/pxf-*-dependencies.tar.gz /tmp/build/"
 
 # Push the pxf-build-dependencies.tar.gz tarball to Google Cloud Storage
 - name: 'gcr.io/cloud-builders/gsutil'
   id: pxf-build-dependencies-tarball
   args: ['cp', '/workspace/build/pxf-build-dependencies.tar.gz', 'gs://${_PXF_BUILD_BUCKET}/build-dependencies/pxf-build-dependencies.tar.gz']
+
+# Push the pxf-automation-dependencies.tar.gz tarball to Google Cloud Storage
+- name: 'gcr.io/cloud-builders/gsutil'
+  id: pxf-automation-dependencies-tarball
+  args: ['cp', '/workspace/build/pxf-automation-dependencies.tar.gz', 'gs://${_PXF_BUILD_BUCKET}/automation-dependencies/pxf-automation-dependencies.tar.gz']
