--- a/concourse/docker/pxf-build-base/cloudbuild.yaml
+++ b/concourse/docker/pxf-build-base/cloudbuild.yaml
@@ -31,7 +31,7 @@ steps:
   - '-c'
   - |
     mkdir /workspace/build
-    docker run --rm -v /workspace/build:/tmp/build/ pxf-build-dev /bin/bash -c "cp /tmp/pxf-*-dependencies.tar.gz /tmp/build/"
+    docker run --rm -v /workspace/build:/tmp/build/ pxf-build-dev /bin/bash -c "cp /tmp/pxf-{build,automation}-dependencies.tar.gz /tmp/build/"
 
 # Push the pxf-build-dependencies.tar.gz tarball to Google Cloud Storage
 - name: 'gcr.io/cloud-builders/gsutil'
